# Gene-Disease-Analysis-Service

./: README.md
.claude/: settings.local.json
backend/: LLM_INTEGRATION_GUIDE.md  NHS_SCOTLAND_INTEGRATION_SUMMARY.md  README.md  integration_test.py  pyproject.toml  test_basic.py  test_database_simple.py  test_llm_integration.py  test_persistent_storage_integration.py  test_worker_pool_integration.py
backend/app/: __init__.py  config.py  main.py
backend/app/db/: __init__.py  crud.py  models.py  session.py
backend/app/models/: __init__.py  analysis.py  llm.py  nhs_scotland.py  session.py
backend/app/routers/: __init__.py  analysis.py  analysis_persistent.py  llm_analysis.py  nhs_scotland.py  session.py  worker_management.py
backend/app/services/: __init__.py  analysis_service.py  context_augmentation.py  cost_tracking.py  embeddings.py  llm_client.py  nhs_scotland_service.py  prompt_templates.py  worker_pool.py
backend/app/storage/: __init__.py  memory_store.py
backend/app/tests/: conftest.py  test_data_transformer.py  test_database.py  test_llm_client.py  test_models.py  test_nhs_scotland_routers.py  test_nhs_scotland_service.py  test_worker_pool.py  test_worker_pool_stress.py
backend/app/utils/: __init__.py  data_transformer.py
backend/data/: gene_analysis.db
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  webpack.config.js
frontend/public/: index.html
frontend/src/: App.css  App.js  index.js
frontend/src/components/: AnalysisForm.js  AnalysisHistory.js  AuthForm.js  ResultsDisplay.js
frontend/src/features/analysis/: analysisSlice.js
frontend/src/features/auth/: authSlice.js
frontend/src/services/: api.js  mockApi.js
frontend/src/store/: index.js
